# osuscorerank-web

./: .env-template  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: suggestions.md  website-issues.md
.github/workflows/: eslint.yml
public/: index.html  manifest.json
src/: App.tsx  index.css  index.tsx  react-app-env.d.ts  reportWebVitals.ts
src/assets/: index.css
src/components/shared/: DimBackground.tsx  ErrorDialog.tsx  Pagination.tsx  ProfileDialog.tsx  RankingList.tsx  SearchButton.tsx  Sidebar.tsx  StatsCard.tsx
src/components/shared/inputs/: Button.tsx  Checkbox.tsx  DimBackground.tsx  Dropdown.tsx  Text.tsx
src/components/shared/mobile/: Dialog.tsx  Navbar.tsx  SearchButton.tsx
src/sort-wasm/: Cargo.toml
src/sort-wasm/src/: lib.rs
src/types/: Country.ts  Log.ts  Score.ts  Update.ts  User.ts
src/types/api/: Country.ts  Response.ts  Score.ts  Update.ts  User.ts
src/types/components/: Dropdown.ts  RankingList.ts
src/types/context/: Settings.ts
src/types/data/: Country.ts
src/utils/: Api.ts  DateFormat.ts  Logging.ts  Number.ts  Options.ts  RankingList.ts  Storage.ts
src/utils/api/: Countries.ts  Main.ts  Scores.ts  Updates.ts  Users.ts
src/views/: App.tsx
src/views/pages/: Country.tsx  Global.tsx  Help.tsx  Settings.tsx  Starred.tsx  StarredSoon.tsx
src/wasm/: Cargo.toml
src/wasm/pkg/: osuinactivescore_wasm.d.ts  osuinactivescore_wasm.js  osuinactivescore_wasm_bg.wasm  osuinactivescore_wasm_bg.wasm.d.ts  package.json
src/wasm/src/: lib.rs  list.rs
